added other components folders and files

--- a/src/assets/partials/_home.scss
+++ b/src/assets/partials/_home.scss
@@ -10,14 +10,14 @@
       
         padding: 20px;
         width: 49%;
-    
-        box-shadow: 0 0 10px 0 rgba(218, 7, 7, 0.15);
+        background-color: rgb(240, 240, 240);
+        box-shadow: 0 0 10px 0 rgba(32, 32, 32, 0.15);
         height: 100%;
     }
     p {
         font-family: 'Share', cursive;
         font-size: 1.7rem;
-        max-width: 100%;
+        max-width: 90%;
         text-align: center;
         margin: 0 auto;
         max-height: 90%;
