--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -4,4 +4,5 @@
 @import './partials/header';
 @import './partials/resets';
 @import './partials/hero';
-@import './partials/home'
+@import './partials/home';
+@import './partials/footer'
