--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -5,4 +5,5 @@
 @import './partials/resets';
 @import './partials/hero';
 @import './partials/home';
-@import './partials/footer'
+@import './partials/About';
+@import './partials/footer';
