about and hero setup done

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -6,4 +6,5 @@
 @import './partials/hero';
 @import './partials/home';
 @import './partials/About';
+@import './partials/contact';
 @import './partials/footer';
