--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -6,26 +6,43 @@ position: absolute;
   width: 100%;
   display: flex;
   align-items: center;
-  height: 90px;
+  height: 100px;
 
 
-  p {
-    width: 10%;
-    margin: 0 auto;
-    text-transform: uppercase;
-    font-family: "Bangers", cursive;
-    font-size: 3.5rem;
-    color: rgb(255, 0, 0);
-  }
-  ul {
+  &__links {
     display: flex;
     justify-content: flex-end;
-    width: 80%;
+    width: 95%;
     margin-right: auto;
-    li {
-      margin-left: 20px;
+    align-items: center;
+
+    .main-nav__listItem--logo {
+      margin-right: auto;
+     
+      width: 90px;
+      height: 60px;
+      border: solid 1px #d8d6d6;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow:  2.5px 1px 2px #d1cfcf;
+      
       a {
-        color: rgb(172, 165, 165); //acaaab
+        color: rgb(218, 216, 216);
+        font-family: 'Bangers', cursive;
+        font-size: 2.8rem;
+        width: 74%;
+        margin: 0 auto;
+        display: block;
+      }
+
+
+    }
+    .main-nav__listItem {
+      margin-left: 12px;
+      
+      a {
+        color: rgb(218, 216, 216); //acaaab
         letter-spacing: 1px;
         font-size: 1.8rem;
         text-transform: uppercase;
@@ -36,35 +53,17 @@ position: absolute;
 }
 
 /* Style the navbar */
-#navbar {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
+
   /* Navbar links */
-  #navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }
+
   
   /* Page content */
-  .content {
-    padding: 16px;
-  }
   
   /* The sticky class is added to the navbar with JS when it reaches its scroll position */
   .sticky {
     position: fixed;
     top: 0;
     width: 100%;
-    background: #333;
+    background: rgb(32, 32, 32);
   }
   
-  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-  .sticky + .content {
-    padding-top: 100px;
-  }
