--- a/src/assets/partials/_hero.scss
+++ b/src/assets/partials/_hero.scss
@@ -1,26 +1,28 @@
 .hero {
   width: 100%;
   height: 650px;
- 
-
   background-image: linear-gradient(
       to right,
-      rgba(28, 26, 26, 0.7),
-      rgba(29, 26, 26, 0.856)
+      rgba(28, 26, 26, 0.962),
+      rgba(29, 26, 26, 0.4)
     ),
     url("/static/img/hero-image.jpg");
- 
+
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   display: flex;
   align-items: center;
   justify-content: center;
-
+  background-attachment: fixed;
   &__content {
-    height: 300px;
-    width: 600px;
+    padding: 12px;
+    border: solid 3px white;
+    height: 320px;
+    width: 700px;
     text-align: center;
+
+    
     h1 {
       color: rgb(245, 245, 245);
       font-size: 4.7rem;
