--- a/src/assets/partials/_home.scss
+++ b/src/assets/partials/_home.scss
@@ -1,26 +1,18 @@
 .intro-container {
-   
+   background-color: rgba(247, 244, 244, 0.994);
     height: 300px;
-    margin: 50px auto;
-    width: 95%;
-   height: 100%;
-    display: flex;
-    justify-content: space-around;
-    &__card {
-      
-        padding: 20px;
-        width: 49%;
-        background-color: rgb(240, 240, 240);
-        box-shadow: 0 0 10px 0 rgba(32, 32, 32, 0.15);
-        height: 100%;
-    }
+    margin-top: 20px;
+    width: 100%;
+   height: 300px;
+
+
     p {
         font-family: 'Share', cursive;
-        font-size: 1.7rem;
+        font-size: 2.5rem;
         max-width: 90%;
         text-align: center;
         margin: 0 auto;
-        max-height: 90%;
+        max-height: 100%;
      
     }
 }
