--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -1,36 +1,42 @@
 .about-container {
  
-    height: 500px;
+    height: 100%;
     width: 100%;
-    height: 600px;
+    
     display: flex;
     justify-content: space-around;
+    flex-direction: column;
     margin: 0 auto;
     border-top: 2px solid rgb(230, 227, 227);
     padding: 50px;
     
     img {
         display: block;
-        width: 22%;
-        height: 90%;
+        width: 300px;
+        height: 400px;
         border-radius: 20px;
+        margin: 0 auto;
         
     }
     .about-container__content {
-        width: 65%;
-        
+        width: 100%;
+        height: 100%;
+        margin-top: 2%;
+        text-align: center;
        
         h2 {
             font-family: 'Share', cursive;
             text-transform: uppercase;
             font-size: 2.5rem;
-            margin: 0;
+            
         }
         p {
             font-size: 1.4rem;
             font-family: 'Montserrat', sans-serif;
             line-height: 1.5;
             color: rgb(130, 127, 127);
+            height: 100%;
+            width: 100%;
         }
         a {
             width: 200px;
