--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -1,52 +1,93 @@
 .contact-container {
-    background-color: rgba(61, 61, 61, 0.167);
-    width: 100%;
-    display: flex;
- justify-content: space-around;
-    height: 600px;
-  &__side {
-    width: 49%;
-    height: 100%;
-    border: black solid 2px;
-  
-  }
-  &__form {
-      width: 49%;
-      height: 100%;
-      border: solid red 2px;
-      h2 {
-          font-family: 'Share', cursive;
-          font-size: 2.5rem;
-      }
-      p {
-          font-family: 'Montserrat';
-          font-size: 1.3rem;
-      }
-    form {
-        margin: 30px auto;
-        width: 95%;
-        height: 100%;
+  background-color: rgba(246, 246, 246, 0.925);
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 100%;
 
-        div {
-            margin-bottom: 20px;
-            width: 90%;
-        }
+  &__form {
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
+
+    h2 {
+      font-family: "Share", cursive;
+      font-size: 2.5rem;
+    }
+    p {
+      font-family: "Montserrat";
+      font-size: 1.3rem;
+    }
+    form {
+      margin: 30px 0;
+      width: 95%;
+      height: 100%;
+
+      .form__inputs {
+        margin-bottom: 20px;
+        width: 100%;
         input {
-            
+            font-size: 1.5rem;
+            font-family: "Montserrat";
             height: 50px;
             width: 100%;
-
-        }
-        label {
-            display: block;
-            font-family: 'Share',cursive;
-            text-transform: uppercase;
-            font-size: 1.5rem;
-        }
-        textarea {
-            width: 100%;
-            height: 150px;
-        }
+          }
+      }
+      .submitBtn{
+        width: 40%;
+        text-align: center;
+        color: white;
+       text-transform: uppercase;
+        background-color: rgb(61, 61, 61);
+        font-size: 1.5rem;
+        font-family: 'Share', cursive;
+        padding: 16px;
+        border-radius: 10px;
+        box-shadow: 2px 4px 8px rgb(123, 122, 122);
+        display: block;
+        border: none;
+        margin: 0 auto;
+      }
+      label {
+        display: block;
+        font-family: "Share", cursive;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+      }
+      textarea {
+        width: 100%;
+        height: 150px;
+        font-size: 1.5rem;
+        font-family: "Montserrat";
+      }
     }
+  }
 }
+
+.contact-container__side {
+  width: 100h;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  p {
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.8rem;
+  }
+  .contact-container__email-icon {
+    background-image: url("/static/img/mail-icon.png");
+    height: 50px;
+    width: 50px;
+    background-size: cover;
+    margin-right: 10px;
+  }
+  .contact-container__phone-icon {
+    background-image: url("/static/img/phone-icon.png");
+    height: 50px;
+    width: 50px;
+    background-size: cover;
+    margin-right: 10px;
+  }
 }
