--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -15,7 +15,7 @@ position: absolute;
     width: 95%;
     margin-right: auto;
     align-items: center;
-
+  
     .main-nav__listItem--logo {
       margin-right: auto;
      
@@ -25,10 +25,10 @@ position: absolute;
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow:  2.5px 1px 2px #d1cfcf;
+      box-shadow:  2px 1px 2px #d1cfcf;
       
       a {
-        color: rgb(218, 216, 216);
+        color: rgb(247, 242, 242);
         font-family: 'Bangers', cursive;
         font-size: 2.8rem;
         width: 74%;
@@ -40,7 +40,9 @@ position: absolute;
     }
     .main-nav__listItem {
       margin-left: 12px;
-      
+   
+        display: none;
+       
       a {
         color: rgb(218, 216, 216); //acaaab
         letter-spacing: 1px;
