--- a/src/assets/partials/_hero.scss
+++ b/src/assets/partials/_hero.scss
@@ -1,35 +1,48 @@
+@keyframes opacityText {
+  // 0%   {opacity: 0;}
+  // 25%  {opacity: .3;}
+  // 50%  {opacity: .5;}
+  // 75% {opacity: .6}
+  // 100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .hero {
   width: 100%;
-  height: 650px;
+  height: 750px;
   background-image: linear-gradient(
       to right,
       rgba(28, 26, 26, 0.962),
       rgba(29, 26, 26, 0.4)
     ),
     url("/static/img/hero-image.jpg");
-
+  position: relative;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   display: flex;
-  align-items: center;
   justify-content: center;
-  background-attachment: fixed;
+  align-items: center;
+padding: 0 30px;
   &__content {
-    padding: 12px;
-    border: solid 3px white;
-    height: 320px;
-    width: 700px;
-    text-align: center;
-
+    // padding: 30px 0;
     
+    text-align: center;
+    animation-delay: 2s;
+    animation: opacityText 4s ease;
+    border: solid 2px white;
+    padding: 30px; 
     h1 {
       color: rgb(245, 245, 245);
-      font-size: 4.7rem;
+      font-size: 3.9rem;
       font-family: "Share", cursive;
     }
     p {
-      margin: 0;
       color: white;
       text-transform: uppercase;
       font-size: 2.5rem;
