finished about and contact mobile

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -7,4 +7,5 @@
 @import './partials/home';
 @import './partials/About';
 @import './partials/contact';
+@import './partials/projects';
 @import './partials/footer';
