--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -2,7 +2,7 @@
  
     height: 100%;
     width: 100%;
-    
+    background-color: lightslategray;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -13,7 +13,7 @@
     img {
         display: block;
         width: 300px;
-        height: 400px;
+        height: 300px;
         border-radius: 20px;
         margin: 0 auto;
         
@@ -25,16 +25,17 @@
         text-align: center;
        
         h2 {
+            color: white;
             font-family: 'Share', cursive;
             text-transform: uppercase;
             font-size: 2.5rem;
             
         }
         p {
-            font-size: 1.4rem;
+            font-size: 1.05rem;
             font-family: 'Montserrat', sans-serif;
             line-height: 1.5;
-            color: rgb(130, 127, 127);
+            color: rgb(227, 225, 225);
             height: 100%;
             width: 100%;
         }
@@ -43,12 +44,12 @@
             text-align: center;
             color: white;
            text-transform: uppercase;
-            background-color: rgb(61, 61, 61);
+            background-color: rgb(167, 166, 166);
             font-size: 1.5rem;
             font-family: 'Share', cursive;
             padding: 16px;
             border-radius: 10px;
-            box-shadow: 2px 4px 8px rgb(123, 122, 122);
+            
             margin: 0 auto;
             display: block;
             &:hover {
