--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -6,18 +6,37 @@ position: absolute;
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   height: 100px;
 
-
+  &__menu-icon {
+    color: white;
+     
+    margin-right: auto;
+    background-image: url('/static/img/menu-icon.png');
+    height: 50px;
+    width: 50px;
+    &::before {
+      content: 'Menu';
+      display: block;
+      position: absolute;
+      right: 65px;
+      top: 35px;
+      font-size: 1.8rem;
+      font-family: 'Share', cursive;
+      
+    }
+  }
   &__links {
     display: flex;
     justify-content: flex-end;
-    width: 95%;
+    width: 85%;
     margin-right: auto;
     align-items: center;
+    padding: 0;
   
     .main-nav__listItem--logo {
-      margin-right: auto;
+      margin: 0 auto 0 10px;
      
       width: 90px;
       height: 60px;
@@ -25,15 +44,17 @@ position: absolute;
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow:  2px 1px 2px #d1cfcf;
+      border-radius: 4px;
+
       
       a {
         color: rgb(247, 242, 242);
-        font-family: 'Bangers', cursive;
-        font-size: 2.8rem;
+        font-family: 'Fjalla One', cursive;
+        font-size: 2.4rem;
         width: 74%;
         margin: 0 auto;
-        display: block;
+       
+    
       }
 
 
@@ -66,6 +87,6 @@ position: absolute;
     position: fixed;
     top: 0;
     width: 100%;
-    background: rgb(32, 32, 32);
+    background: rgb(43, 43, 43);
   }
   
