--- a/src/assets/partials/_hero.scss
+++ b/src/assets/partials/_hero.scss
@@ -31,12 +31,13 @@
 padding: 0 30px;
   &__content {
     // padding: 30px 0;
-    
+    background-color: rgba(14, 13, 13, 0.064);
     text-align: center;
     animation-delay: 2s;
     animation: opacityText 4s ease;
-    border: solid 2px white;
+    border: solid 2px rgb(254, 254, 254);
     padding: 30px; 
+    
     h1 {
       color: rgb(245, 245, 245);
       font-size: 3.9rem;
