--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -1,4 +1,42 @@
 .row {
-    background-color: red;
+
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+ background-color: rgba(211, 211, 211, 0.338);
+  &__card {
+    
+    width: 95%;
+    margin-bottom: 5%;
     height: 100%;
+    box-shadow: 0 0 30px 0 rgba(19, 19, 19, 0.653);
+    img {
+      width: 100%;
+      height: auto;
+      
+    }
+    &__content {
+       
+        height: 100%;
+        padding: 12px;
+        width: 100%;
+        height: 20%;
+        background-color: rgb(21, 21, 21);
+        h2 {
+            text-align: left;
+            color: white;
+            font-family: 'Share', cursive;
+            text-transform: uppercase;
+        }
+        p {
+            text-align: center;
+            margin: 0;
+            color: white;
+            font-family: 'Montserrat'
+        }
+  
+    }
+  }
 }
