--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -21,7 +21,7 @@
     }
     form {
       margin: 30px 0;
-      width: 95%;
+      width: 100%;
       height: 100%;
 
       .form__inputs {
@@ -48,6 +48,10 @@
         display: block;
         border: none;
         margin: 0 auto;
+        cursor: pointer;
+        &:hover {
+          opacity: .9;
+        }
       }
       label {
         display: block;
