--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -16,11 +16,14 @@ position: absolute;
     background-image: url('/static/img/menu-icon.png');
     height: 50px;
     width: 50px;
+    @media (min-width: 460px) {
+      display: none;
+    }
     &::before {
       content: 'Menu';
       display: block;
       position: absolute;
-      right: 65px;
+      right: 75px;
       top: 35px;
       font-size: 1.8rem;
       font-family: 'Share', cursive;
@@ -31,9 +34,12 @@ position: absolute;
     display: flex;
     justify-content: flex-end;
     width: 85%;
-    margin-right: auto;
+    margin-right: left;
     align-items: center;
     padding: 0;
+    @media (min-width: 460px) {
+      width: 95%;
+    }
   
     .main-nav__listItem--logo {
       margin: 0 auto 0 10px;
@@ -61,8 +67,12 @@ position: absolute;
     }
     .main-nav__listItem {
       margin-left: 12px;
-   
-        display: none;
+      display: none;
+        
+        @media (min-width: 460px) {
+          display: block;
+          
+        }
        
       a {
         color: rgb(218, 216, 216); //acaaab
