--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -1,42 +1,71 @@
 .row {
-
   height: 100%;
-  padding: 20px;
+  margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
- background-color: rgba(211, 211, 211, 0.338);
+  background-color: rgba(255, 255, 255, 0.893);
   &__card {
-    
     width: 95%;
-    margin-bottom: 5%;
-    height: 100%;
-    box-shadow: 0 0 30px 0 rgba(19, 19, 19, 0.653);
+    margin-bottom: 80px;
+    height: auto;
+    box-shadow: 0 0 30px 0 rgba(179, 177, 177, 0.653);
+    position: relative;
+    @media (min-width: 700px) {
+      height: 600px;
+    }
+
     img {
       width: 100%;
-      height: auto;
-      
+      height: 100%;
     }
+
     &__content {
-       
-        height: 100%;
-        padding: 12px;
+      background-color: rgba(75, 74, 74, 0.859);
+    
+      padding: 30px;
+
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      top: 0;
+      left: 0;
+      @media (min-width: 700px) {
         width: 100%;
-        height: 20%;
-        background-color: rgb(21, 21, 21);
-        h2 {
-            text-align: left;
-            color: white;
-            font-family: 'Share', cursive;
-            text-transform: uppercase;
-        }
-        p {
-            text-align: center;
-            margin: 0;
-            color: white;
-            font-family: 'Montserrat'
-        }
-  
+        height: 100%;
+      }
+      h2 {
+        text-align: left;
+        color: white;
+        font-family: "Share", cursive;
+        text-transform: uppercase;
+        margin-top: 0;
+        font-size: 2.3rem;
+      }
+      p {
+        text-align: center;
+
+        color: white;
+        font-family: "Montserrat";
+        font-size: 1.2rem;
+      }
+      a {
+        width: 170px;
+        padding: 12px;
+        text-align: center;
+        color: white;
+        text-transform: uppercase;
+        background-color: rgb(167, 166, 166);
+        font-size: 1.5rem;
+        font-family: "Share", cursive;
+
+        border-radius: 10px;
+
+        margin: 0 auto;
+        display: block;
+      }
     }
   }
 }
