changed images from folder to urls

--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -81,14 +81,14 @@
     font-size: 1.8rem;
   }
   .contact-container__email-icon {
-    background-image: url("/static/img/mail-icon.png");
+    background-image: url("https://i.imgur.com/sqNzGdr.png");
     height: 50px;
     width: 50px;
     background-size: cover;
     margin-right: 10px;
   }
   .contact-container__phone-icon {
-    background-image: url("/static/img/phone-icon.png");
+    background-image: url("https://i.imgur.com/tcKY6wF.png");
     height: 50px;
     width: 50px;
     background-size: cover;
