--- a/src/assets/partials/_hero.scss
+++ b/src/assets/partials/_hero.scss
@@ -20,7 +20,7 @@
       rgba(28, 26, 26, 0.962),
       rgba(29, 26, 26, 0.4)
     ),
-    url("/static/img/hero-image.jpg");
+    url("https://i.imgur.com/Ubn2Lgh.jpg");
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -37,7 +37,7 @@ padding: 0 30px;
     animation: opacityText 4s ease;
     border: solid 2px rgb(254, 254, 254);
     padding: 30px; 
-    
+
     h1 {
       color: rgb(245, 245, 245);
       font-size: 3.9rem;
