--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -13,7 +13,7 @@ position: absolute;
     color: white;
      
     margin-right: auto;
-    background-image: url('/static/img/menu-icon.png');
+    background-image: url('https://i.imgur.com/IvwKc3H.png');
     height: 50px;
     width: 50px;
     @media (min-width: 460px) {
