--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -7,8 +7,8 @@
   background-color: rgba(255, 255, 255, 0.893);
   &__card {
     width: 95%;
-    margin-bottom: 80px;
-    height: auto;
+    margin-bottom: 50px;
+    height: 450px;
     box-shadow: 0 0 30px 0 rgba(179, 177, 177, 0.653);
     position: relative;
     @media (min-width: 700px) {
@@ -21,10 +21,10 @@
     }
 
     &__content {
-      background-color: rgba(75, 74, 74, 0.859);
+      background-color: rgba(37, 36, 36, 0.886);
     
       padding: 30px;
-
+        height: 100%;
       position: absolute;
       display: flex;
       flex-direction: column;
@@ -37,12 +37,12 @@
         height: 100%;
       }
       h2 {
-        text-align: left;
+  
         color: white;
         font-family: "Share", cursive;
         text-transform: uppercase;
         margin-top: 0;
-        font-size: 2.3rem;
+        font-size: 2.5rem;
       }
       p {
         text-align: center;
@@ -50,6 +50,9 @@
         color: white;
         font-family: "Montserrat";
         font-size: 1.2rem;
+        @media (min-width) {
+
+        }
       }
       a {
         width: 170px;
