--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -13,7 +13,7 @@
     img {
         display: block;
         width: 300px;
-        height: 300px;
+        height: 280px;
         border-radius: 20px;
         margin: 0 auto;
         
@@ -38,6 +38,9 @@
             color: rgb(227, 225, 225);
             height: 100%;
             width: 100%;
+            @media (min-width: 760px){
+                font-size: 1.3rem;
+            }
         }
         a {
             width: 200px;
