--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -5,12 +5,21 @@
   justify-content: space-around;
   flex-direction: column;
   height: 100%;
+  @media (min-width: 760px) {
+    flex-direction: row;
+    justify-content: space-around;
+    
+    
+  }
 
   &__form {
     width: 80%;
     height: 100%;
-    margin: 0 auto;
-
+   margin: 0 auto;
+    @media (min-width: 760px) {
+      width: 45%
+        
+      }
     h2 {
       font-family: "Share", cursive;
       font-size: 2.5rem;
@@ -23,7 +32,7 @@
       margin: 30px 0;
       width: 100%;
       height: 100%;
-
+ 
       .form__inputs {
         margin-bottom: 20px;
         width: 100%;
@@ -70,12 +79,18 @@
 }
 
 .contact-container__side {
-  width: 100h;
-  height: 100%;
+  width: 100%;
+  height: 300px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  @media (min-width: 760px) {
+    width: 52%;
+    height: 500px;
+ justify-content: center;
+ align-items: center;
+    }
   p {
     font-family: "Montserrat", sans-serif;
     font-size: 1.8rem;
