--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -50,8 +50,9 @@
         color: white;
         font-family: "Montserrat";
         font-size: 1.2rem;
-        @media (min-width) {
-
+        @media (min-width:700px) {
+            font-size: 2rem;
+            max-width: 1000px;
         }
       }
       a {
