--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -8,8 +8,8 @@
   &__card {
     width: 95%;
     margin-bottom: 50px;
-    height: 450px;
-    box-shadow: 0 0 30px 0 rgba(179, 177, 177, 0.653);
+    height: 400px;
+    box-shadow: 0 0 30px 0 rgba(69, 68, 68, 0.653);
     position: relative;
     @media (min-width: 700px) {
       height: 600px;
@@ -50,7 +50,8 @@
         color: white;
         font-family: "Montserrat";
         font-size: 1.2rem;
-        @media (min-width:700px) {
+        line-height: 1.5;
+        @media (min-width:760px) {
             font-size: 2rem;
             max-width: 1000px;
         }
