--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -2,7 +2,7 @@
  
     height: 100%;
     width: 100%;
-    background-color: lightslategray;
+    background-color: rgb(96, 96, 96);
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -32,7 +32,7 @@
             
         }
         p {
-            font-size: 1.05rem;
+            font-size: 1.1rem;
             font-family: 'Montserrat', sans-serif;
             line-height: 1.5;
             color: rgb(227, 225, 225);
