--- a/src/assets/partials/_footer.scss
+++ b/src/assets/partials/_footer.scss
@@ -1,5 +1,42 @@
 footer {
-    background-color: rgb(32, 32, 32);
-    height: 200px;
+    background-color: rgb(45, 45, 45);
+  
     width: 100%;
+    padding: 12px;
+    .social-media__nav {
+      
+        ul {
+            display: flex;
+            width: 100%;
+            height: auto;
+            justify-content: center;
+         
+            align-items: center;
+            .social-media__nav-link--margin-left {
+                margin-left: 10px;
+            }
+
+            li {
+                width: 50px;
+                height: 50px;
+                .social-media__nav__facebook-icon {
+                    background-image: url("https://i.imgur.com/jPtDeEL.png");
+                    width: 50px;
+                    height: 50px;
+                    background-size: cover;
+                
+                    display: block;
+                }
+                .social-media__nav__linkedIn-icon {
+                    background-image: url('https://i.imgur.com/Hxn4meN.png');
+                    display: block;
+                    background-size: cover;
+                   
+                    height: 50px;
+                    width: 50px
+                }
+               
+            }
+        }
+    }
 }
