--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -2,12 +2,12 @@
  
     height: 100%;
     width: 100%;
-    background-color: rgb(96, 96, 96);
+    background-color: rgb(228, 228, 228);
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     margin: 0 auto;
-    border-top: 2px solid rgb(230, 227, 227);
+ 
     padding: 50px;
     
     img {
@@ -25,7 +25,7 @@
         text-align: center;
        
         h2 {
-            color: white;
+            color: rgb(0, 0, 0);
             font-family: 'Share', cursive;
             text-transform: uppercase;
             font-size: 2.5rem;
@@ -35,7 +35,7 @@
             font-size: 1.1rem;
             font-family: 'Montserrat', sans-serif;
             line-height: 1.5;
-            color: rgb(227, 225, 225);
+            color: rgb(104, 103, 103);
             height: 100%;
             width: 100%;
             @media (min-width: 760px){
@@ -47,7 +47,7 @@
             text-align: center;
             color: white;
            text-transform: uppercase;
-            background-color: rgb(167, 166, 166);
+            background-color: rgb(61, 61, 61);;
             font-size: 1.5rem;
             font-family: 'Share', cursive;
             padding: 16px;
