--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -21,7 +21,7 @@
     }
 
     &__content {
-      background-color: rgba(37, 36, 36, 0.886);
+      background-color: rgba(0, 0, 0, 0.829);
     
       padding: 30px;
         height: 100%;
@@ -60,9 +60,9 @@
         width: 170px;
         padding: 12px;
         text-align: center;
-        color: white;
+        color: rgb(66, 65, 65);
         text-transform: uppercase;
-        background-color: rgb(167, 166, 166);
+        background-color: rgb(189, 188, 188);
         font-size: 1.5rem;
         font-family: "Share", cursive;
 
