--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -10,12 +10,13 @@ position: absolute;
   height: 100px;
 
   &__menu-icon {
-    color: white;
+    cursor: pointer;
      
     margin-right: auto;
     background-image: url('https://i.imgur.com/IvwKc3H.png');
     height: 50px;
     width: 50px;
+
     @media (min-width: 460px) {
       display: none;
     }
@@ -27,6 +28,7 @@ position: absolute;
       top: 35px;
       font-size: 1.8rem;
       font-family: 'Share', cursive;
+      color: white
       
     }
   }
@@ -100,3 +102,60 @@ position: absolute;
     background: rgb(43, 43, 43);
   }
   
+
+  .mobile-nav {
+    display: none;
+    background-color: rgb(23, 22, 22);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    &__menu-icon--mobile {
+   
+     position: absolute;
+     top: 0;
+     right: 0;
+
+      background-image: url('https://i.imgur.com/IvwKc3H.png');
+      height: 50px;
+      width: 50px;
+      margin-right: 10px;
+      cursor: pointer;
+      &::before {
+        content: 'Menu';
+        display: block;
+        position: absolute;
+        right: 60px;
+        top: 12px;
+        font-size: 1.8rem;
+        font-family: 'Share', cursive;
+        color: white;
+        
+      }
+    }
+    ul {
+      
+      border: solid red 2px;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      li {
+        width: 100%;
+      }
+      .main-nav__listItem--margin-top {
+        margin-top: 10px;
+      }
+      a {
+        color: white;
+        font-family: 'Share', cursive;
+        font-size: 4.5rem;
+      }
+    }
+  }
