--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -101,13 +101,11 @@
   height: 100%;
   position: fixed;
   z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
   top: 0;
   &__menu-icon--mobile {
     position: absolute;
-    top: 0;
+    top: 5px;
     right: 0;
 
     background-image: url("https://i.imgur.com/IvwKc3H.png");
@@ -130,10 +128,11 @@
  
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
     li {
       width: 100%;
     }
