--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -5,7 +5,7 @@
   justify-content: space-around;
   flex-direction: column;
   height: 100%;
-
+  padding: 20px;
   @media (min-width: 760px) {
     flex-direction: row;
     justify-content: space-around;
@@ -18,7 +18,7 @@
     height: 100%;
    margin: 0 auto;
     @media (min-width: 760px) {
-      width: 45%
+      width: 49%
         
       }
     h2 {
@@ -80,34 +80,42 @@
 }
 
 .contact-container__side {
-  width: 100%;
-  height: 300px;
+
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  padding: 20px;
   @media (min-width: 760px) {
-    width: 52%;
+    width: 50%;
     height: 500px;
- justify-content: center;
- align-items: center;
+
+
     }
   p {
     font-family: "Montserrat", sans-serif;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
+    .contact-container__email-icon {
+      background-image: url("https://i.imgur.com/sqNzGdr.png");
+      height: 50px;
+      width: 50px;
+      background-size: cover;
+      margin-right: 10px;
+      display: block;
+      margin: 0 auto;
+      
+    }
+    .contact-container__phone-icon {
+      background-image: url("https://i.imgur.com/tcKY6wF.png");
+      height: 50px;
+      width: 50px;
+      background-size: cover;
+      margin-right: 10px;
+    
+      display: block;
+      margin: 0 auto;
+    }
+    
   }
-  .contact-container__email-icon {
-    background-image: url("https://i.imgur.com/sqNzGdr.png");
-    height: 50px;
-    width: 50px;
-    background-size: cover;
-    margin-right: 10px;
-  }
-  .contact-container__phone-icon {
-    background-image: url("https://i.imgur.com/tcKY6wF.png");
-    height: 50px;
-    width: 50px;
-    background-size: cover;
-    margin-right: 10px;
-  }
+
 }
