--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -22,9 +22,9 @@
 
     &__content {
       background-color: rgba(0, 0, 0, 0.829);
-    
+
       padding: 30px;
-        height: 100%;
+      height: 100%;
       position: absolute;
       display: flex;
       flex-direction: column;
@@ -32,29 +32,24 @@
       justify-content: center;
       top: 0;
       left: 0;
-      @media (min-width: 700px) {
-        width: 100%;
-        height: 100%;
-      }
+
       h2 {
-  
         color: white;
         font-family: "Share", cursive;
         text-transform: uppercase;
         margin-top: 0;
-        font-size: 2.5rem;
+        font-size: 2.2rem;
+        @media (min-width: 700px) {
+          font-size: 2.5rem;
+        }
       }
       p {
         text-align: center;
-
+        margin-top: 0;
         color: white;
         font-family: "Montserrat";
-        font-size: 1.2rem;
+        font-size: 1.05rem;
         line-height: 1.5;
-        @media (min-width:760px) {
-           
-            max-width: 1000px;
-        }
       }
       a {
         width: 170px;
@@ -65,11 +60,12 @@
         background-color: rgb(189, 188, 188);
         font-size: 1.5rem;
         font-family: "Share", cursive;
-
         border-radius: 10px;
-
         margin: 0 auto;
         display: block;
+        &:hover {
+            opacity: .9;
+        }
       }
     }
   }
