images in src testing

--- a/src/assets/partials/_hero.scss
+++ b/src/assets/partials/_hero.scss
@@ -20,7 +20,7 @@
       rgba(28, 26, 26, 0.962),
       rgba(29, 26, 26, 0.4)
     ),
-    url("https://i.imgur.com/Ubn2Lgh.jpg");
+    url("img/hero-image.jpg");
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
