--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -1,11 +1,12 @@
 .contact-container {
+  
   background-color: rgb(255, 255, 255);
   width: 100%;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
   height: 100%;
-  padding: 20px;
+  padding: 0 20px;
   @media (min-width: 760px) {
     flex-direction: row;
     justify-content: space-around;
@@ -22,6 +23,7 @@
         
       }
     h2 {
+     
       font-family: "Share", cursive;
       font-size: 2.5rem;
     }
