--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -1,63 +1,57 @@
 .about-container {
- 
-    height: 100%;
-    width: 100%;
-    background-color: rgb(228, 228, 228);
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(228, 228, 228);
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 100px 20px;
+  img {
+    display: block;
+    width: 300px;
+    height: 280px;
+    border-radius: 20px;
     margin: 0 auto;
- padding: 20px;
+  }
+  .about-container__content {
+    width: 100%;
+    height: 100%;
+    margin-top: 2%;
+    text-align: center;
 
-    
-    img {
-        display: block;
-        width: 300px;
-        height: 280px;
-        border-radius: 20px;
-        margin: 0 auto;
-        
+    h2 {
+      color: rgb(0, 0, 0);
+      font-family: "Share", cursive;
+      text-transform: uppercase;
+      font-size: 2.5rem;
     }
-    .about-container__content {
-        width: 100%;
-        height: 100%;
-        margin-top: 2%;
-        text-align: center;
-       
-        h2 {
-            color: rgb(0, 0, 0);
-            font-family: 'Share', cursive;
-            text-transform: uppercase;
-            font-size: 2.5rem;
-            
-        }
-        p {
-            font-size: 1.1rem;
-            font-family: 'Montserrat', sans-serif;
-            line-height: 1.5;
-            color: rgb(104, 103, 103);
-            height: 100%;
-            width: 100%;
-            @media (min-width: 760px){
-                font-size: 1.3rem;
-            }
-        }
-        a {
-            width: 200px;
-            text-align: center;
-            color: white;
-           text-transform: uppercase;
-            background-color: rgb(61, 61, 61);;
-            font-size: 1.5rem;
-            font-family: 'Share', cursive;
-            padding: 16px;
-            border-radius: 10px;
-            
-            margin: 0 auto;
-            display: block;
-            &:hover {
-                opacity: .9;
-            }
-        }
+    p {
+      font-size: 1.1rem;
+      font-family: "Montserrat", sans-serif;
+      line-height: 1.5;
+      color: rgb(104, 103, 103);
+      height: 100%;
+      width: 100%;
+      @media (min-width: 760px) {
+        font-size: 1.3rem;
+      }
     }
+    a {
+      width: 200px;
+      text-align: center;
+      color: white;
+      text-transform: uppercase;
+      background-color: rgb(61, 61, 61);
+      font-size: 1.5rem;
+      font-family: "Share", cursive;
+      padding: 16px;
+      border-radius: 10px;
+      margin: 0 auto;
+      display: block;
+      &:hover {
+        opacity: 0.9;
+      }
+    }
+  }
 }
