--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -1,5 +1,4 @@
 .contact-container {
-  
   background-color: rgb(255, 255, 255);
   width: 100%;
   display: flex;
@@ -10,20 +9,16 @@
   @media (min-width: 760px) {
     flex-direction: row;
     justify-content: space-around;
-    
-    
   }
 
   &__form {
     width: 80%;
     height: 100%;
-   margin: 0 auto;
+    margin: 0 auto;
     @media (min-width: 760px) {
-      width: 49%
-        
-      }
+      width: 49%;
+    }
     h2 {
-     
       font-family: "Share", cursive;
       font-size: 2.5rem;
     }
@@ -35,25 +30,25 @@
       margin: 30px 0;
       width: 100%;
       height: 100%;
- 
+
       .form__inputs {
         margin-bottom: 20px;
         width: 100%;
         input {
-            font-size: 1.5rem;
-            font-family: "Montserrat";
-            height: 50px;
-            width: 100%;
-          }
+          font-size: 1.5rem;
+          font-family: "Montserrat";
+          height: 50px;
+          width: 100%;
+        }
       }
-      .submitBtn{
+      .submitBtn {
         width: 40%;
         text-align: center;
         color: white;
-       text-transform: uppercase;
+        text-transform: uppercase;
         background-color: rgb(61, 61, 61);
         font-size: 1.5rem;
-        font-family: 'Share', cursive;
+        font-family: "Share", cursive;
         padding: 16px;
         border-radius: 10px;
         box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.667);
@@ -62,7 +57,7 @@
         margin: 0 auto;
         cursor: pointer;
         &:hover {
-          opacity: .9;
+          opacity: 0.9;
         }
       }
       label {
@@ -82,7 +77,6 @@
 }
 
 .contact-container__side {
-
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -90,10 +84,8 @@
   padding: 20px;
   @media (min-width: 760px) {
     width: 50%;
-    height: 500px;
-
-
-    }
+    height: 700px;
+  }
   p {
     font-family: "Montserrat", sans-serif;
     font-size: 1.6rem;
@@ -102,22 +94,24 @@
       height: 50px;
       width: 50px;
       background-size: cover;
-      margin-right: 10px;
+
       display: block;
       margin: 0 auto;
-      
     }
     .contact-container__phone-icon {
       background-image: url("https://i.imgur.com/tcKY6wF.png");
       height: 50px;
       width: 50px;
       background-size: cover;
-      margin-right: 10px;
-    
+
       display: block;
       margin: 0 auto;
     }
-    
   }
-
+  .elevator-btn {
+    margin: auto 0 0 auto;
+    height: 100px;
+    width: 100px;
+    background: blue;
+  }
 }
