--- a/src/assets/partials/_hero.scss
+++ b/src/assets/partials/_hero.scss
@@ -1,13 +1,9 @@
 @keyframes opacityText {
-  // 0%   {opacity: 0;}
-  // 25%  {opacity: .3;}
-  // 50%  {opacity: .5;}
-  // 75% {opacity: .6}
-  // 100% {opacity: 1;}
-  0% {
+
+  from {
     opacity: 0;
   }
-  100% {
+  to {
     opacity: 1;
   }
 }
@@ -48,7 +44,6 @@ padding: 0 30px;
       text-transform: uppercase;
       font-size: 2.5rem;
       font-weight: bold;
-
       font-family: "Share", cursive;
     }
   }
