--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -1,3 +1,9 @@
+.projects-container {
+    h2 {
+        text-align: center;
+        font-size: 4rem;
+        font-family: 'Share', cursive;
+    }
 .row {
   height: 100%;
   margin-top: 20px;
@@ -69,4 +75,5 @@
       }
     }
   }
+}
 }
