border on inputs changed

--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -39,6 +39,7 @@
           font-family: "Montserrat";
           height: 50px;
           width: 100%;
+          border: solid 2px rgb(99, 96, 96);
         }
       }
       .submitBtn {
@@ -71,6 +72,7 @@
         height: 150px;
         font-size: 1.5rem;
         font-family: "Montserrat";
+        border: solid 2px rgb(99, 96, 96);
       }
     }
   }
