--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -3,35 +3,47 @@
   width: 100%;
   background-color: rgb(228, 228, 228);
   display: flex;
+  align-items: center;
   justify-content: space-around;
   flex-direction: column;
-  margin: 0 auto;
-padding: 30px;
+  margin: 100px auto 15px auto;
+  padding: 30px;
+  @media (min-width: 1060px) {
+    flex-direction: row;
+  }
   img {
-    display: block;
     width: 300px;
-    height: 350px;
-    border-radius: 20px;
+    height: 300px;
+    border-radius: 100%;
     margin: 0 auto;
+    @media (min-width: 1060px) {
+      width: 400px;
+      height: 400px;
+    }
   }
   .about-container__content {
     width: 100%;
-    height: 100%;
+    height: 700px;
     margin-top: 2%;
     text-align: center;
+    @media (min-width: 1060px) {
+      width: 60%;
+    }
 
     h2 {
       font-family: "Share", cursive;
       text-transform: uppercase;
       font-size: 2.5rem;
+      @media (min-width: 767px) {
+        font-size: 3.5rem;
+      }
     }
     p {
       font-size: 1.1rem;
       font-family: "Montserrat", sans-serif;
       line-height: 1.5;
       color: rgb(104, 103, 103);
-      height: 100%;
-      width: 100%;
+
       @media (min-width: 760px) {
         font-size: 1.3rem;
       }
