--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -5,7 +5,7 @@
   justify-content: space-around;
   flex-direction: column;
   height: 100%;
-  margin: 0 auto;
+  margin: 100px auto;
   @media (min-width: 760px) {
     flex-direction: row;
     justify-content: space-around;
