--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -2,13 +2,13 @@
   //   background-color: rgb(245, 243, 243);//403e3e
   top: 0;
   z-index: 100;
-  position: fixed;
+  position: absolute;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100px;
-background-color: rgb(43, 43, 43);
+  background-color: rgb(28, 27, 27);
   &__menu-icon {
     cursor: pointer;
     margin-right: 10px;
@@ -77,12 +77,7 @@ background-color: rgb(43, 43, 43);
     }
   }
 }
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background: rgb(43, 43, 43);
-}
+
 
 .mobile-nav {
   background-color: rgb(23, 22, 22);
