--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -2,6 +2,7 @@
   width: 100%;
  padding: 30px;
   height: 100%;
+  margin-top: 100px;
   h2 {
     text-align: center;
     font-size: 4rem;
@@ -28,7 +29,7 @@
         height: 100%;
       }
       &__content {
-        background-color: rgba(0, 0, 0, 0.596);
+        background-color: rgba(0, 0, 0, 0.675);
         padding: 30px;
         height: 100%;
         position: absolute;
