--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -1,12 +1,12 @@
 .about-container {
   height: 100%;
   width: 100%;
-  background-color: rgb(228, 228, 228);
+  
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
-  margin: 100px auto 15px auto;
+  margin: 100px auto 20px auto;
   padding: 30px;
   @media (min-width: 1060px) {
     flex-direction: row;
@@ -23,7 +23,7 @@
   }
   .about-container__content {
     width: 100%;
-    height: 700px;
+    height: 100%;
     margin-top: 2%;
     text-align: center;
     @media (min-width: 1060px) {
