--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -1,13 +1,13 @@
 .about-container {
   height: 100%;
   width: 100%;
-  
+  background-color: rgb(211, 209, 209);
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
   margin: 100px auto 20px auto;
-  padding: 30px;
+  padding: 80px 30px;
   @media (min-width: 1060px) {
     flex-direction: row;
   }
