--- a/src/assets/partials/_footer.scss
+++ b/src/assets/partials/_footer.scss
@@ -16,14 +16,14 @@ footer {
         width: 50px;
         height: 50px;
         .social-media__nav__facebook-icon {
-          background-image: url("img/facebook-icon.svg");
+          background-image: url("https://i.imgur.com/Hxn4meN.png");
           width: 100%;
           height: 100%;
           background-size: cover;
           display: block;
         }
         .social-media__nav__linkedIn-icon {
-          background-image: url("img/linkedin-icon.svg");
+          background-image: url("https://i.imgur.com/jPtDeEL.png");
           display: block;
           background-size: cover;
           height: 50px;
