--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   height: 100px;
-  background-color: rgb(28, 27, 27);
+
   &__menu-icon {
     cursor: pointer;
     margin-right: 10px;
@@ -78,7 +78,12 @@
   }
 }
 
-
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgb(51, 51, 51);
+}
 .mobile-nav {
   background-color: rgb(23, 22, 22);
   width: 100%;
